# my-first-os

./: Cargo.toml  README.md
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  stack_overflow.rs
