[package]
name = "my1os"
version = "0.1.0"
authors = ["Hannu Hartikainen <hannu.hartikainen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.8.0", features = ["map_physical_memory"] }
pc-keyboard = "0.3.1"
pic8259_simple = "0.1.1"
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.7.5"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33
test-timeout = 10

[[test]]
name = "stack_overflow"
harness = false
